enginaryum.com init

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "the-plain-gatsby-starter",
+  "name": "enginaryum-blog",
   "private": true,
-  "description": "A simple minimalist starter for your personal blog",
+  "description": "Muhammet Enginar's personal blog",
   "version": "0.1.0",
-  "author": "Kinyanjui Wangonya <kwangonya@gmail.com>",
+  "author": "Muhammet Enginar <enginaryum@gmail.com>",
   "dependencies": {
     "gatsby": "^2.5.7",
     "gatsby-image": "^2.1.0",
@@ -45,9 +45,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wangonya/the-plain-gatsby"
-  },
-  "bugs": {
-    "url": "https://github.com/wangonya/the-plain-gatsby/issues"
+    "url": "https://github.com/enginaryum/enginaryum.com"
   }
 }
